--- a/modal.css
+++ b/modal.css
@@ -169,6 +169,17 @@ main {
   background-color: rgba(26, 39, 156, 0.4);
 }
 
+.bground-success {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(26, 39, 156, 0.4);
+}
 .content {
   margin: 5% auto;
   width: 100%;
@@ -181,6 +192,22 @@ main {
   position: relative;
   color: #fff;
   padding-top: 10px;
+}
+
+.content-success {
+  margin: 5% auto;
+  width: 100%;
+  height: 700px;
+  max-width: 500px;
+  animation-name: modalopen;
+  animation-duration: var(--modal-duration);
+  background: #232323;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+  color: #fff;
+  padding-top: 10px;
+  
 }
 
 .modal-body {
@@ -446,6 +473,14 @@ input[data-error]::after {
   font-weight: normal;
   margin-top: 57px;
   padding: 0;
+}
+
+.hero-text-success {
+  width: 100%;
+  font-weight: normal;
+  margin-top: 57px;
+  padding: 0;
+  text-align: center;
 }
 .btn-signup {
   outline: none;
