--- a/modal.css
+++ b/modal.css
@@ -37,6 +37,7 @@ img {
 }
 .header-logo {
     float: left;
+    margin-left: 14px;
 }
 .main-navbar {
     float: right;
@@ -44,7 +45,7 @@ img {
 .topnav a {
   float: left;
   display: block;
-  color: #000000;
+  color: #fe142f;
   text-align: center;
   padding: 12px 12px;
   margin: 5px;
@@ -514,6 +515,7 @@ footer {
   margin: 0 20px;
 }
 @media screen and (max-width: 800px) {
+ 
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -521,7 +523,7 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    padding: 0px;
   }
   .hero-content::after {
     content: unset;
@@ -530,16 +532,17 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 2.6rem;
     white-space: normal;
   }
   .hero-text {
     width: unset;
-    font-size: 1.5rem;
+    font-size: 13px;
+    margin-top: 26px;
   }
   .hero-img img {
     border-radius: 10px;
-    margin-top: 40px;
+    margin-top: 26px;
   }
   .hero-section > .btn-signup {
     display: block;
