--- a/modal.css
+++ b/modal.css
@@ -200,7 +200,7 @@ main {
   margin-bottom: 5%;
   margin-left: auto;
   width: 100%;
-  height: 600px;
+  height: 625px;
   max-width: 515px;
   background: #232323;
   border-radius: 10px;
@@ -556,6 +556,20 @@ footer {
   .copyrights {
     margin-top: 50px;
     text-align: center;
+  }
+  .content-success {
+    margin-right: auto;
+    margin-bottom: 5%;
+    margin-left: auto;
+    width: 100%;
+    height: 763px;
+    max-width: 515px;
+    background: #232323;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    color: #fff;
+    padding-top: 10px;
   }
 }
 
