--- a/modal.css
+++ b/modal.css
@@ -48,7 +48,7 @@ img {
   color: #fe142f;
   text-align: center;
   padding: 12px 12px;
-  margin: 5px;
+  margin: auto;
   text-decoration: none;
   font-size: 20px;
   font-family: Roboto, sans-serif;
@@ -75,6 +75,7 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
+    margin-top: -15px;
   }
 }
 
